--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue.charts.css",
-  "version": "1.0.2",
+  "version": "2.0.0",
   "description": "Vue JS wrapper for Charts CSS",
   "main": "dist/vue-charts-css.min.js",
   "author": "Matthew Spence",
@@ -17,6 +17,9 @@
     "chart",
     "scss",
     "vue",
+    "vue 3",
+    "vuejs",
+    "vue.js",
     "vue js",
     "sass",
     "vue charts",
@@ -31,20 +34,19 @@
   "devDependencies": {
     "@babel/core": "^7.16.12",
     "babel-loader": "^8.2.3",
-    "css-loader": "^5.1.3",
+    "css-loader": "^6.3.0",
     "mini-css-extract-plugin": "^1.3.9",
     "sass": "^1.49.0",
     "sass-loader": "^10.2.1",
     "style-loader": "^2.0.0",
-    "vue-loader": "^15.9.6",
+    "vue-loader": "^16.0.0",
     "vue-style-loader": "^4.1.3",
-    "vue-template-compiler": "^2.6.12",
     "webpack": "^5.67.0",
     "webpack-cli": "^4.9.2"
   },
   "dependencies": {
     "charts.css": "^0.9.0",
-    "vue": "^2.6.12"
+    "vue": "^3.1.0"
   },
   "sideEffects": false,
   "cssnano": {
