--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue.charts.css",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Vue JS wrapper for Charts CSS",
   "main": "dist/vue-charts-css.min.js",
   "author": "Matthew Spence",
@@ -25,8 +25,8 @@
     "ui-component"
   ],
   "scripts": {
-    "watch": "node_modules/.bin/webpack --config=webpack.config.js --progress --watch --color --mode=development",
-    "production": "node_modules/.bin/webpack --config=webpack.config.js --progress --color --mode=production"
+    "watch": "webpack --config=webpack.config.js --progress --watch --color --mode=development",
+    "production": "webpack --config=webpack.config.js --progress --color --mode=production"
   },
   "devDependencies": {
     "@babel/core": "^7.16.12",
@@ -44,7 +44,7 @@
   },
   "dependencies": {
     "charts.css": "^0.9.0",
-    "vue": "^2.6.12"
+    "vue": "^2.6.14"
   },
   "sideEffects": false,
   "cssnano": {
